correction duplication code in app.css for horizontal scroll in hommepage

--- a/src/App.css
+++ b/src/App.css
@@ -163,7 +163,8 @@ section.route-section {
 
 /* Categorie scrool */
 
-.containing0 {
+
+.containing {
   display: flex;
   overflow-x: hidden;
   overflow-y: hidden;
@@ -172,173 +173,4 @@ section.route-section {
   white-space: nowrap;
 }
 
-.containing1 {
-  display: flex;
-  overflow-x: hidden;
-  overflow-y: hidden;
-  height: 35vh;
-  width: 100%;
-  white-space: nowrap;
-}
 
-.containing2 {
-  display: flex;
-  overflow-x: hidden;
-  overflow-y: hidden;
-  height: 35vh;
-  width: 100%;
-  white-space: nowrap;
-}
-
-.containing3 {
-  display: flex;
-  overflow-x: hidden;
-  overflow-y: hidden;
-  height: 35vh;
-  width: 100%;
-  white-space: nowrap;
-}
-
-.containing4 {
-  display: flex;
-  overflow-x: hidden;
-  overflow-y: hidden;
-  height: 35vh;
-  width: 100%;
-  white-space: nowrap;
-}
-
-.containing5 {
-  display: flex;
-  overflow-x: hidden;
-  overflow-y: hidden;
-  height: 35vh;
-  width: 100%;
-  white-space: nowrap;
-}
-
-.containing6 {
-  display: flex;
-  overflow-x: hidden;
-  overflow-y: hidden;
-  height: 35vh;
-  width: 100%;
-  white-space: nowrap;
-}
-
-.containing7 {
-  display: flex;
-  overflow-x: hidden;
-  overflow-y: hidden;
-  height: 35vh;
-  width: 100%;
-  white-space: nowrap;
-}
-
-.containing8 {
-  display: flex;
-  overflow-x: hidden;
-  overflow-y: hidden;
-  height: 35vh;
-  width: 100%;
-  white-space: nowrap;
-}
-
-.containing9 {
-  display: flex;
-  overflow-x: hidden;
-  overflow-y: hidden;
-  height: 35vh;
-  width: 100%;
-  white-space: nowrap;
-}
-
-.containing10 {
-  display: flex;
-  overflow-x: hidden;
-  overflow-y: hidden;
-  height: 35vh;
-  width: 100%;
-  white-space: nowrap;
-}
-
-.containing11 {
-  display: flex;
-  overflow-x: hidden;
-  overflow-y: hidden;
-  height: 35vh;
-  width: 100%;
-  white-space: nowrap;
-}
-
-.containing12 {
-  display: flex;
-  overflow-x: hidden;
-  overflow-y: hidden;
-  height: 35vh;
-  width: 100%;
-  white-space: nowrap;
-}
-
-.containing13 {
-  display: flex;
-  overflow-x: hidden;
-  overflow-y: hidden;
-  height: 35vh;
-  width: 100%;
-  white-space: nowrap;
-}
-
-.containing14 {
-  display: flex;
-  overflow-x: hidden;
-  overflow-y: hidden;
-  height: 35vh;
-  width: 100%;
-  white-space: nowrap;
-}
-
-.containing15 {
-  display: flex;
-  overflow-x: hidden;
-  overflow-y: hidden;
-  height: 35vh;
-  width: 100%;
-  white-space: nowrap;
-}
-
-.containing16 {
-  display: flex;
-  overflow-x: hidden;
-  overflow-y: hidden;
-  height: 35vh;
-  width: 100%;
-  white-space: nowrap;
-}
-
-.containing17 {
-  display: flex;
-  overflow-x: hidden;
-  overflow-y: hidden;
-  height: 35vh;
-  width: 100%;
-  white-space: nowrap;
-}
-
-.containing18 {
-  display: flex;
-  overflow-x: hidden;
-  overflow-y: hidden;
-  height: 35vh;
-  width: 100%;
-  white-space: nowrap;
-}
-
-.containing19 {
-  display: flex;
-  overflow-x: hidden;
-  overflow-y: hidden;
-  height: 35vh;
-  width: 100%;
-  white-space: nowrap;
-}
